<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/home_page_title_main"
        android:textColor="#ffb20eaf"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffffff"
        android:hint="@string/acro_input_hint_main"
        android:textColorHint="#ff69696a"
        android:id="@+id/editText"
        android:layout_marginTop="142dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url_credit_main"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"
        android:textColor="#ffffffff"
        android:paddingBottom="10dp"/>

    <at.markushi.ui.CircleButton
        android:layout_width="64dip"
        android:layout_height="64dip"
        app:cb_color="#99CC00"
        app:cb_pressedRingWidth="8dip"
        android:layout_marginTop="107dp"
        android:layout_below="@+id/editText"
        android:src="@drawable/ic_action_done"
        android:id="@+id/search_button_main"
        android:layout_centerHorizontal="true"
        android:onClick="displaySearchResults"/>

</RelativeLayout>
